<resources>
    <string name="imagedesc">Application Logo</string>
    <string name="listimagelang">Language Flags</string>
    <string name="listCusTextV">Textview</string>
    <string name="Pick"><b><u>Please select your language:</u></b></string>
    <string name="warn"><b><u>WARNING</u></b></string>
    <string name="NoUse">Please do not use this application whilst driving.\nOnly use this application whilst vehicle is parked</string>
    <string name="OBD"><b><u>OBD-II Compliant Car</u></b></string>
    <string name="cars">US vehicles manufactured after 1996. \n\nEU vehicles manufactured after 2004. \n\nJAP vehicles manufactured after 2005</string>
    <string name="ElmSet"><b><u>ELM-327 Setup</u></b></string>
    <string name="instruct"><b><u><i>Step 1</i></u></b> \nPlug adapter into OBD-II 16-pin port. \n\n<b><u><i>Step 2</i></u></b> \nEnsure green light flashes on adapter.
                        \n\n<b><u><i>Step 3</i></u></b> \nStart car engine. \n\n<b><u><i>Step 4</i></u></b> \nNavigate to settings on Android device: Settings > Bluetooth > Adapter Name > Pair devices.
                        \n\n<b><u><i>Step 5</i></u></b> \nNavigate to settings within app: \nSettings > Select adapter name from list.</string>
    <string name="FAQ"><b><u>Does My Car have OBD-II?</u></b> \n\nAll 1996 and newer vehicles, both petrol and diesel fuel passenger vehicles. The vehicles are required to have OBD-II systems. To verify that your
        vehicle is equipped with OBD II, you can look for the words "OBD II" on the emission control information label attached to the underside of the vehicle hood</string>
    <string name="FAQ1"><b><u>What is the Engine RPM sensor?</u></b> \n\nRPM means "Revolutions Per Minute". It measures the number of times the Crankshaft rotates in the engine. when combustion
    (aka The vehicle is started) in the engine cylinder occurs, the pistons begin moving up and down. The motion this creates is sent to the Crankshaft and this motion is what is
        measured as RPM</string>
    <string name="FAQ2"><b><u>What is the Engine Load sensor? </u></b> \n\n The Manifold Absolute Pressure (MAP) sensor. Engine load is the amount of vacuum in the intake
    manifold. The reading drops when the throttle is open (when vehicle is accelerating)</string>
    <string name="FAQ3"><b><u>What is the Coolant Temperature sensor?</u></b> \n\nA CTS is used to measure the temperature of the coolant in the cooling system of a vehicle. This sensor gives off a reading indicating how
    much heat the engine is giving off. The ECU uses this sensor to keep the engine temperature down by adjusting the fuel injection, fuel mix and when the electric fan is switched on and off.</string>
    <string name="FAQ4"><b><u>What is the Mass Airflow Rate sensor?</u></b> \n\nThis sensor is used to find out the mass flow rate of air that is entering an engine. This sensor is required to help balance and deliver
    the correct fuel mass to the engine, due to the fact that air changes its density with temperature and pressure.</string>
    <string name="FAQ5"><b><u>What is the Throttle Position sensor? </u></b>\n\nThis sensor is used to monitor the throttle position of a vehicle. </string>
    <string name="FAQ6"><b><u>What is the Engine Air Temperature sensor?</u></b> \n\nThis sensor monitors the temperature of the air entering the engine.</string>
    <string name="intake">Intake Air Temperatures</string>
    <string name="coolant">Coolant Temperatures</string>
    <string name="RPM">Engine RPM</string>
    <string name="mass_air">Mass Airflow Rate data</string>
    <string name="throttle">Throttle Position</string>
    <string name="load">Engine Load"</string>
    <string name="engine_rpm_def"> Engine RPM is defined as: Revolutions per minute. \nThis measures how fast
    a vehicle is operating by measuring how many times the crankshaft does a full rotation. </string>
    <string name="engine_rpm_title">Engine RPM definition</string>
    <string name="cancel">Cancel</string>
    <string name="IMPORTANT">DATA MESSAGE</string>
    <string name="rpm_info">Data received from database show: \nEngine RPM is: NORMAL</string>
    <string name="engine_airflow_def">The Mass Airflow Rate is the rate of air entering an engine. \nThis is needed to
        balance and deliver the correct fuel mass (or amount) to an engine.</string>
    <string name="engine_airflow_title">Engine Mass Airflow Rate definition</string>
    <string name="airflow_info">Data received from database show: \nMass Airflow Rate is: NORMAL</string>
    <string name="engine_coolant_title">Coolant Temperature definition</string>
    <string name="engine_air_intake_def">The Air Intake Temperature sensor monitors the temperature of the air
    entering the engine. \nThis reading is required to estimate air density so it can balance air/fuel mixture.</string>
    <string name="engine_coolant_def">Coolant is a liquid required within a vehicles engine. \nIt absorbs
    heat from the engine to avoid overheating to prevent damage. \nIf the coolant temperature rises this means that
    there is a possibility that the engine is:\n \n1) Overheating \n2) Coolant levels are low</string>
    <string name="engine_air_intake_title">Air Intake Temperature definition</string>
    <string name="coolant_airintake_info">Data received from database show: \nEngine Coolant Temperature is:
        NORMAL \nAir Intake Temperature is: NORMAL</string>
    <string name="engine_load_title">Engine Load definition</string>
    <string name="engine_load_def">The MAP sensor reads the engine load. \nEngine load is the amount of vacuum in the intake
    manifold. \nThe reading drops when the throttle is open (when vehicle is accelerating)</string>
    <string name="engine_throttle_title">Throttle position definition</string>
    <string name="engine_throttle_def">Throttle Position sensor monitors the throttle position of a vehicle</string>
    <string name="throttle_load_info">Data received from database show: \nEngine Load is:
        NORMAL \nThrottle position is: NORMAL</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="exit">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Log_in">Login</string>
    <string name="save">Save</string>
    <string name="enter_displayname">Enter Display name</string>
    <string name="email_sent">Verification Email Sent</string>
    <string name="displayname_empt">Name Required</string>
    <string name="prof_updated">Profile Updated</string>
    <string name="in_prof">You are already in your profile</string>
    <string name="ent_valid_email">Please enter a valid email address</string>
    <string name="email_need">Email is required</string>
    <string name="pass_empt">Password is required</string>
    <string name="mini_length">Minimum length of password is 6</string>
    <string name="reg_user">User Registered Successfully</string>
    <string name="reg_already">Email is already registered</string>
    <string name="lang_page">You are already in the language selection screen</string>
    <string name="user_page">You are already in \'User Help\'</string>
    <string name="comment_here">Enter your Comment here</string>
    <string name="comment_desc">Comment icon</string>
    <string name="part_image">Part image</string>
    <string name="image_desc">image description</string>
    <string name="username">username</string>
    <string name="loading">Loading Comment, Please wait</string>
    <string name="likebtn">like button</string>
    <string name="date">Post Date</string>
    <string name="likes">0 Likes</string>
    <string name="comments">0 Comments</string>
    <string name="comment_icon">comment icon</string>
    <string name="lang_select">Language Selection</string>
    <string name="acc_login">Account Login</string>
    <string name="create_acc">Create Account</string>
    <string name="gen_info">General Information</string>
    <string name="vehicle_info">Vehicle Information</string>
    <string name="edit_prof">Edit profile</string>
    <string name="social">Social Forum</string>
    <string name="ELM">ELM-327 Setup</string>
    <string name="Ok">OK</string>
    <string name="options_page">You are already in \'Home\'</string>
    <string name="vehicle">Vehicle Image</string>
    <string name="manu">Enter the vehicle manufacturer</string>
    <string name="model">Enter the vehicle model</string>
    <string name="reg">Enter the vehicle registration</string>
    <string name="manutext">Manufacturer</string>
    <string name="modeltext">Model</string>
    <string name="regtext">Registration</string>
    <string name="insert_pic"><b><u>Tap on the camera to choose a profile picture: </u></b></string>
    <string name="Signup">Create Account</string>
    <string name="No_Acc"><b><u>Don\'t have an account? Sign up here!</u></b></string>
    <string name="have_Acc"><b><u>Already have an account? Sign in here!</u></b></string>
    <string name="vehicles"><b><u>Vehicles: </u></b></string>
    <string name="email_NotVerified"><b><u>Email not Verified (Click here to Verify)</u></b></string>
    <string name="userpost"><b><u>User Posts: </u></b></string>
    <string name="comment_heading"><b><u>Comments: </u></b></string>
    <string name="FAQUser"><b><u>FAQs and User help: </u></b></string>
    <string name="email_verified"><b><u>Email Verified</u></b></string>
    <string name="enterdesc"><b><u>Please enter image and description below: </u></b></string>
    <string name="make">Vehicle Make: </string>
    <string name="model2">Vehicle Model: </string>
    <string name="vehreg">Vehicle Reg: </string>
    <string name="veh_dets"><b><u>Please enter vehicle details and a secure password below: </u></b></string>
    <string name="ent_below">Please enter the specific password below </string>
    <string name="pass_protect">The next pages are Password protected</string>
    <string name="continueon">Continue</string>
    <string name="enter_pass">Enter a password</string>
    <string name="enter_engine">Enter the vehicles engine size</string>
    <string name="confirm">Confirm password</string>
    <string name="veh_make">vehicle make</string>
    <string name="veh_model">vehicle model</string>
    <string name="veh_reg">vehicle reg</string>
    <string name="veh_engine">vehicle engine size</string>
    <string name="check_irreg">Check data for irregularities</string>
    <string name="CoolantTemperatureThresholdLow">Coolant Temperature is too low!</string>
    <string name="CoolantTemperatureThreshold_instructionsLow">The the normal operating engine
        temperature is in a range of 195 to 220 degrees Fahrenheit.\n REASON:\n1. Defective
        thermostat staying open.\n 2. Defective coolant fan temperature switch.\n\nSOLUTIONS:\n1.
        Remove, test and replace thermostat. \n2. Replace, test and replace coolant fan switch.
        \n\n Always contact a qualified
        mechanic before attempting self maintenance.</string>
    <string name="CoolantTemperatureThresholdHigh">Coolant Temperature is too high!</string>
</resources>