<?xml version="1.0" encoding="utf-8"?>
<!--

-->

<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".LoginUser">

     <ImageView
         android:id="@+id/vel"
         android:paddingTop="40sp"
         android:contentDescription="@string/imagedesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/vel"
         android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:paddingTop="30sp"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingBottom="15dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp"
        android:text="@string/Log_in"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/No_Acc"
        android:textColor="@color/black"
        android:textSize="20sp"/>


</android.support.v7.widget.LinearLayoutCompat>