<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".SignupUser">


    <ImageView
        android:id="@+id/vel"
        android:contentDescription="@string/imagedesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vel"
        android:layout_gravity="center"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/editTextEmail"
        android:hint="@string/prompt_email"
        android:layout_width="300dp"
        android:inputType="textEmailAddress"
        android:paddingBottom="15dp" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/editTextPassword"
        android:hint="@string/prompt_password"
        android:layout_width="300dp"
        android:inputType="textPassword"
        android:paddingBottom="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignup"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp"
        android:text="@string/Signup"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textViewLogin"
        android:text="@string/have_Acc"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

</android.support.v7.widget.LinearLayoutCompat>


