<?xml version="1.0" encoding="utf-8"?>

<!--
    This XML file designs the layout for the 'Welcome_Page.class'
    This XML file defines an 'ImageView' to display the VéL app logo,
    This XML file defines three 'Buttons' that redirects the
    user to different pages linked to this page.
-->

<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c70039"
    android:orientation="vertical"
    tools:context=".Welcome_Page">

    <ImageView
        android:id="@+id/vel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/imagedesc"
        android:paddingBottom="85sp"
        android:paddingStart="20sp"
        android:paddingEnd="0dp"
        android:paddingTop="70sp"
        android:src="@drawable/vel">
    </ImageView>

    <Button
        android:id="@+id/langbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/lang_select"
        android:textColor="#c70039">
    </Button>

    <Button
        android:id="@+id/Loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/acc_login"
        android:textColor="#c70039">
    </Button>

    <Button
        android:id="@+id/CreateAccbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/create_acc"
        android:textColor="#c70039">
    </Button>

</android.support.v7.widget.LinearLayoutCompat>