<?xml version="1.0" encoding="utf-8"?>

<!--
    This XML file designs the layout for the 'SetupELM.class'
    This XML file defines an 'ImageView' to display the VéL app logo,
    Two 'TextViews' that display Strings of text to the user and finally a 'Button' which
    redirects the user to a new screen.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#c70039">

    <android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#c70039"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        tools:context="com.example.user.vel.SetupELM">

        <ImageView
            android:id="@+id/vel"
            android:contentDescription="@string/imagedesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:paddingTop="17sp"
            android:src="@drawable/vel"
            android:layout_gravity="center">
        </ImageView>

        <TextView
            android:id="@+id/ELM_text1"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/vel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textSize="17sp"
            android:text="@string/ElmSet">
        </TextView>

        <TextView
            android:id="@+id/ELM_text2"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/ELM_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textSize="17sp"
            android:text="@string/instruct">
        </TextView>

        <Button
            android:id="@+id/bt1"
            android:textColor="#C70039"
            android:backgroundTint="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/Ok">
        </Button>

    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
